--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -3,134 +3,242 @@
 {% load staticfiles %}
 
 {% block scripts_and_styles %}
-<script src="{% static 'smo-treeview/smo.treeview.js' %}"></script>
+<script src="{% static 'smo-treeview/smo.treeview-test.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'smo-treeview/smo.treeview.css' %}">
-
 <!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<!-- <script src='https://www.google.com/jsapi?autoload={"modules":[{"name":"visualization","version":"1","packages":["corechart","table", "controls"]}]}'></script> -->
-
-<!--Load Dygraphs -->
 <script type="text/javascript" src="http://dygraphs.com/dygraph-dev.js"></script>
+<!-- http://cavorite.com/labs/js/dygraphs-export/ -->
+<script type="text/javascript" src="http://cavorite.com/labs/js/dygraphs-export/dygraph-extra.js"></script>
 
 <script>
-	google.load('visualization', '1.0', {'packages':["corechart", "table", "controls"]}); 
-	angular.module('dataExplorerApp', ['ui.bootstrap', 'angularTreeview'])
-	.controller('dataExplorerController', [ '$scope', '$http', '$window', function($scope, $http, $window) {
-		$scope.tableLoaded = false;
+	google.load('visualization', '1.0', {'packages':["corechart", "table", "controls"]});
+	angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
+	.controller('testController', [ '$scope', '$http', '$window', function($scope, $http, $window) {				
+		$scope.activeTabId = "";
+		$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+			  $scope.activeTabId = e.target.id; // activated tab
+// 			  e.relatedTarget // previous tab
+			});
 		
+		$scope.tableLoaded = false;
+		$scope.dsetName = "";
+	
 		$scope.initTable = function(){
+			$scope.csvFileName = $scope.dsetName + ".csv";
+			$scope.imgFileName = $scope.dsetName;
 			$scope.allChecked = true;
 			$scope.columnsShow = [];
+			for (i=0; i<$scope.columnTable.columns.length; i++){
+				$scope.columnsShow[i] = true;
+			}
+			$scope.xAxis = 0;
 			$scope.tableArray = [];
 			var columnNames = [];
 			for (i=0; i<$scope.columnTable.columns.length; i++){
 				columnNames.push($scope.columnTable.columns[i].name);
-				$scope.columnsShow[i] = true;
-			}
+			}			
 			$scope.tableArray.push(columnNames);
 			for (i=0; i<$scope.columnTable.data.length; i++){
-				$scope.tableArray.push($scope.columnTable.data[i]);
+				$scope.tableArray.push($scope.columnTable.data[i]);				
 			}
+			
 			$scope.data = google.visualization.arrayToDataTable($scope.tableArray);
-			var formatter = new google.visualization.NumberFormat({pattern: '###.###'});
-			for (i=0; i<$scope.columnTable.columns.length; i++){
-				formatter.format($scope.data, i);
-			}
 			$scope.view = new google.visualization.DataView($scope.data);
+			$scope.setView();
+			$scope.plotData();
+			$('#plotTab').tab('show');
 		}
-		
-		$scope.setView = function (){
-			var viewCloumns = [];
-			for (i=0; i<$scope.columnsShow.length; i++){
-				if ($scope.columnsShow[i] == true){
-					viewCloumns.push(i);
+
+		$scope.setView = function(){
+			$scope.viewCloumns = [];
+			$scope.viewCloumns.push($scope.xAxis);
+
+			for (i=0; i<$scope.tableArray[0].length; i++){				
+				if (i != $scope.xAxis){
+					if ($scope.columnsShow[i] == true){
+						$scope.viewCloumns.push(i);				
+					}
 				}
 			}
-			$scope.view.setColumns(viewCloumns);
+ 			$scope.view.setColumns($scope.viewCloumns);			
+		}	
+		
+		$scope.update = function(){
+			$scope.setView();
+			if ($scope.activeTabId == "tableTab") $scope.drawTable();
+			if ($scope.activeTabId == "plotTab") $scope.plotData();
 		}
 		
 		$scope.setToAll = function(){
 			for (i=0; i<$scope.columnsShow.length; i++){
 				$scope.columnsShow[i] = $scope.allChecked;
 			}
-			$scope.setView();
+			$scope.update();
 		}
 		
-		$scope.update = function(){
+		$scope.updateChecked = function(){
 			$scope.allChecked = false;
+			$scope.update();
+		}
+
+		$scope.drawTable = function (){
 			$scope.setView();
-		}
-		
-		$scope.drawTable = function (){						
-			var table = new google.visualization.Table(document.getElementById('table_div'));
-			table.draw($scope.data, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});			
-		}
-		
-		$scope.drawView = function (){
-			var tableView = new google.visualization.Table(document.getElementById('view_div'));
+			var tableView = new google.visualization.Table(document.getElementById('table_div'));
 			tableView.draw($scope.view, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});
 		}
 		
+		$scope.chart1 = new Dygraph.GVizChart(
+				document.getElementById('dygraphs'));
+		
 		$scope.plotData = function(){
-			var chart1 = new Dygraph.GVizChart(
-			document.getElementById('dygraphs')).draw($scope.view, {
+			$scope.chart1.draw($scope.view, {
 				labelsDiv: 'dylegend',
 				labelsDivWidth: 150,
 				labelsSeparateLines: true,
 				width: 900,
-				height: 500
+				height: 500,
+				title: $scope.dsetName,
+				xlabel: $scope.tableArray[0][$scope.xAxis],
+				drawCallback: function(chart, isInitial) {
+					$scope.columnColors = [];
+					$scope.columnColors[$scope.xAxis] = 'black';
+					for (i=1; i<$scope.viewCloumns.length; i++)												
+						$scope.columnColors[$scope.viewCloumns[i]]=chart.getPropertiesForSeries(chart.getLabels()[i]).color;
+				}
 			});
 		}
+		
+		$scope.exportCSV = function (){
+			var columnLabels = new Array();
+			var columnNum = $scope.view.getNumberOfColumns();
+			for (i = 0; i < columnNum; i++){
+				columnLabels.push($scope.view.getColumnLabel(i));
+			}
+			var columnLabelsString = columnLabels.join(",");
+			var csvString = columnLabelsString + "\n";
+			var dataViewCSV = google.visualization.dataTableToCsv($scope.view);
+			csvString += dataViewCSV;
+			// download stuff
+		 	var blob = new Blob([csvString], {
+		 	  "type": "text/csv;charset=utf8;"			
+		 	});
+		 	var link = document.getElementById('csvElem');
+						
+		 	if(link.download !== undefined) { // feature detection
+		 	  // Browsers that support HTML5 download attribute
+		 	  link.setAttribute("href", window.URL.createObjectURL(blob));
+		 	  link.setAttribute("download", $scope.csvFileName);
+		 	 } else {
+		 		// it needs to implement server side export
+				//link.setAttribute("href", "http://www.example.com/export");
+		 		  alert("Needs to implement server side export");
+		 		  return;
+		 	}
+// 		 	document.body.appendChild(link);
+		 	link.click();
+		};
+		
+		$scope.exportToPNG = function(){
+			var img = document.getElementById('demoimg');
+			Dygraph.Export.asPNG($scope.chart1, img);
+			var link = document.createElement("a");			
+		 	if(link.download !== undefined) { // feature detection
+		 	  // Browsers that support HTML5 download attribute
+		 	  link.setAttribute("href", img.src);
+		 	  link.setAttribute("download", $scope.imgFileName);
+		 	 } else {
+		 		// it needs to implement server side export
+				//link.setAttribute("href", "http://www.example.com/export");
+		 		  alert("Needs to implement server side export");
+		 		  return;
+		 	}
+		 	document.body.appendChild(link);
+		 	link.click();
+		}
 	}]);
+
 </script>
 {% endblock %}
 
 {% block content %}
-<div ng-app="dataExplorerApp" ng-controller="dataExplorerController">
+<div ng-app="testApp" ng-controller="testController">
 	<div class="container">
 		<!-- Nav tabs -->
 		<ul class="nav nav-tabs" role="tablist" id="myTab">
-		  <li class="active"><a data-target="#tree" role="tab" data-toggle="tab">Explorer</a></li>
-		  <li ng-show="tableLoaded" ><a data-target="#table" role="tab" data-toggle="tab" ng-click="drawTable()">Overview</a></li>
-		  <li ng-show="tableLoaded" ><a data-target="#view" role="tab" data-toggle="tab" ng-click="drawView()">Table</a></li>
-		  <li ng-show="tableLoaded" ><a data-target="#plot" role="tab" data-toggle="tab" ng-click="plotData()">Plot</a></li>
+		  <li class="active"><a id="explorerTab" data-target="#treePane" role="tab" data-toggle="tab">Explorer</a></li>
+		  <li ng-show="tableLoaded" ><a id="plotTab" data-target="#plotPane" role="tab" data-toggle="tab" ng-click="plotData()">Plot</a></li>
+		  <li ng-show="tableLoaded" ><a id="tableTab" data-target="#tablePane" role="tab" data-toggle="tab" ng-click="drawTable()">Table</a></li>
 		</ul>
 
 		<!-- Tab panes -->
 		<div class="tab-content">
-		  <div class="tab-pane active" id="tree">
+		  <div class="tab-pane active" id="treePane">
 			  	<br>
 			  	<div style="text-align: left; font-weight: bold; font-size: medium;">Explore data file:</div>
 			  	<br>
 			  	<smo-hdf-browser tree-id="hdfView"></smo-hdf-browser>
 		  </div>
-		  <div class="tab-pane" id="table">
-		  	<div>Select columns to display:</div>
-		  	<div>
-				<input type="checkbox" ng-model="allChecked" ng-change="setToAll()"></input>
-				<span>Check/Uncheck all</span>
-			</div>
-  			<div style="width: 70%;">		  				
-				<div style="display:inline-block;" ng-repeat="columnName in tableArray[0] track by $index">
-					<input type="checkbox" ng-model="columnsShow[$index]" ng-change="update()"></input>
-					<span ng-bind="columnName"></span>
-					&nbsp&nbsp&nbsp&nbsp&nbsp
-	    		</div>
-	    	</div>		  	
-			<div id="table_div"></div>			
+		  <div class="tab-pane" id="plotPane">
+				<div ng-bind="dsetName" style="font-weight: bold; font-size: large;"></div>
+				<div>
+					<input type="checkbox" ng-model="allChecked" ng-change="setToAll()"></input>
+					<span>Check/Uncheck all</span>
+				</div>
+				<div style="width: 70%;">		  				
+					<div style="display:inline-block;" ng-hide="$index == xAxis" ng-repeat="columnName in tableArray[0] track by $index">
+						<input type="checkbox" ng-model="columnsShow[$index]" ng-change="updateChecked()"></input>
+						<span ng-style="{color: columnColors[$index]}" ng-bind="columnName"></span>
+						&nbsp&nbsp&nbsp&nbsp&nbsp
+					</div>
+				</div>
+				<div>
+					Set X axis:
+					<select ng-options="tableArray[0].indexOf(columnName) as columnName for columnName in tableArray[0]" ng-model="xAxis" ng-change="update()">
+					</select>
+				</div>
+				
+				<div>			  
+					<div id="dygraphs" style="display:inline-block; float: left;"></div>	
+					<div id="dylegend" style="display:inline-block; float:left;"></div>
+				</div>
+				
+				<div style="float: left;">
+					<br>
+					File name:&nbsp
+					<input type="text" ng-model="imgFileName" style="width:30%;"></input>&nbsp
+    				<button class="btn btn-default" ng-click="exportToPNG()">Export as PNG</button>
+    				<img id="demoimg" hidden>
+				</div>
+				
 		  </div>
-		  <div class="tab-pane" id="view">
-		  		<div id="view_div"></div>	
-		  </div>
-		  <div class="tab-pane" id="plot">
-		  <table>
-		  <tr>
-			  	<td><div id="dygraphs" style="display:inline-block;"></div></td>
-			  	<td><div id="dylegend" style="display:inline-block; vertical-align:text-top;"></div></td>
-			  </tr>
-			</table>
-		  </div>
+		  <div class="tab-pane" id="tablePane">
+		  		<div ng-bind="dsetName" style="font-weight: bold; font-size: large;"></div>
+				<div>
+					<input type="checkbox" ng-model="allChecked" ng-change="setToAll()"></input>
+					<span>Check/Uncheck all</span>
+				</div>
+				<div style="width: 70%;">		  				
+					<div style="display:inline-block;" ng-hide="$index == xAxis" ng-repeat="columnName in tableArray[0] track by $index">
+						<input type="checkbox" ng-model="columnsShow[$index]" ng-change="updateChecked()"></input>
+						<span ng-bind="columnName"></span>
+						&nbsp&nbsp&nbsp&nbsp&nbsp
+					</div>
+				</div>
+				<div>
+					Set first column:
+					<select ng-options="tableArray[0].indexOf(columnName) as columnName for columnName in tableArray[0]" ng-model="xAxis" ng-change="update()">
+					</select>
+				</div>				  
+				<div id="table_div"></div>	
+				<br>
+				<div>
+					File name:&nbsp
+					<input type="text" ng-model="csvFileName" style="width:10%;"></input>&nbsp
+    				<button class="btn btn-default" ng-click="exportCSV()">Export as CSV</button>
+				</div>
+				<a id="csvElem" hidden></a>
+		 </div>
 		</div>
 	</div>
 </div>
