--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -4,10 +4,9 @@
 
 {% block scripts_and_styles %}
 <script src="{% static 'SmoUtil.js' %}"></script>
-<script src="{% static 'angular-sprintf.min.js' %}"></script>
 
 <script>
-angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
+angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
@@ -17,6 +16,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
 		[ '$scope', '$http', '$window', 'util', 'units', 'materials', 
 		function($scope, $http, $window, util, units, materials) {
 		
+		$scope.inputsObtained = false;
 		$scope.resultComputed = false;
 		$scope.units = units;
 		$scope.materials = materials;
@@ -33,22 +33,38 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
 // 			pipeMaterial : 'StainlessSteel304',
 // 			fluid : 'ParaHydrogen'
 // 		};
-		$scope.inputs = [
-			{type : 'group', name: 'Geometry', fields: [
-				{name: 'pipeLength', quantity: 'Length', value: 1, unit: 'm', title: 'pipe length (L)'},
-				{name: 'internalDiameter', quantity: 'Length', value: 5, unit: 'mm', title: 'internal diameter (d<sub>i</sub>)'},
-				{name: 'externalDiameter', quantity : 'Length', value: 6, unit: 'mm', title: 'external diameter (d<sub>o</sub>)'},
-				{name: 'pipeMaterial', type : 'choice', value: 'StainlessSteel304', options: materials.solids, title: 'pipe material'},
-				{name: 'surfaceRoughness', quantity : 'Length', value: 25, unit: 'um', title: 'abs. surface roughness'},
-			]},
-			{type: 'group', name: 'Flow', fields: [
-				{name: 'fluid', type : 'choice', value: 'ParaHydrogen', options : materials.fluids, title : 'fluid'},
-				{name: 'inletPressure', quantity : 'Pressure', value : 2, unit: 'bar', title : 'inlet pressure'},
-				{name: 'inletTemperature', quantity : 'Temperature', value : 15, unit: 'degC', title : 'inlet temperature'},
-				{name: 'massFlowRate', quantity : 'MassFlowRate', value : 10, unit: 'kg/h', title : 'mass flow rate'}
+		
+		    
+		$scope.getInputs = function() {
+			$scope.inputsObtained = false;
+			$http({
+		        method  : 'POST',
+		        url     : '/ThermoFluids/FlowResistance/',
+		        data    : {action : 'getInputs', parameters: {}},
+		        headers : { 'Content-Type': 'application/x-www-form-urlencoded' }  // set the headers so angular passing info as form data (not request payload)
+		    })
+		    .success(function(data) {
+		    	$scope.inputs = data;
+		    	$scope.inputsObtained = true;
+		    });
+		}
+		$scope.getInputs();
+// 		$scope.inputs = [
+// 			{type : 'group', name: 'Geometry', fields: [
+// 				{name: 'pipeLength', quantity: 'Length', value: 1, unit: 'm', title: 'pipe length (L)'},
+// 				{name: 'internalDiameter', quantity: 'Length', value: 5, unit: 'mm', title: 'internal diameter (d<sub>i</sub>)'},
+// 				{name: 'externalDiameter', quantity : 'Length', value: 6, unit: 'mm', title: 'external diameter (d<sub>o</sub>)'},
+// 				{name: 'pipeMaterial', type : 'choice', value: 'StainlessSteel304', options: materials.solids, title: 'pipe material'},
+// 				{name: 'surfaceRoughness', quantity : 'Length', value: 25, unit: 'um', title: 'abs. surface roughness'},
+// 			]},
+// 			{type: 'group', name: 'Flow', fields: [
+// 				{name: 'fluid', type : 'choice', value: 'ParaHydrogen', options : materials.fluids, title : 'fluid'},
+// 				{name: 'inletPressure', quantity : 'Pressure', value : 2, unit: 'bar', title : 'inlet pressure'},
+// 				{name: 'inletTemperature', quantity : 'Temperature', value : 15, unit: 'degC', title : 'inlet temperature'},
+// 				{name: 'massFlowRate', quantity : 'MassFlowRate', value : 10, unit: 'kg/h', title : 'mass flow rate'}
 
-			]}
-		];
+// 			]}
+// 		];
 		
 		$scope.dumpObj = function(obj) {
 			return angular.toJson(obj, true);
@@ -96,11 +112,13 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo', 'sprintf'])
 	<div class="col-md-1"></div>
 	<div class="col-md-10">
 	<h1>Pressure losses in Pipe flow</h1>
+	<div ng-if="inputsObtained">
 	<h2>Input data</h2>
 	<div style="position:relative; width:250mm;height:50mm">
 		<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
 	</div>
 	<div display="inline-block;" smo-input-view smo-data-source="inputs"></div>
+	</div>
 	<div><br>asdasd<br>asdadfsd<br><button class="btn btn-default" ng-click="compute()">Compute</button></div>
 	
 	<div ng-if="resultComputed">
