New field added in Pipe model.
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -119,7 +119,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	</div>
 	<div display="inline-block;" smo-input-view smo-data-source="inputs"></div>
 	</div>
-	<div><br>asdasd<br>asdadfsd<br><button class="btn btn-default" ng-click="compute()">Compute</button></div>
+	<div><button class="btn btn-default" ng-click="compute()">Compute</button></div>
 	
 	<div ng-if="resultComputed">
 		<hr>
