--- a/templates/Base.html
+++ b/templates/Base.html
@@ -55,11 +55,9 @@
 				      <ul class="dropdown-menu" role="menu">
 				        <li><a href="{% url 'ThermoFluids:FluidPropertiesCoolProp' %}">Fluid Properties (CoolProp)</a></li>
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">FlowResistance</a></li>
-				        <li><a href="#">Something else here</a></li>
-				        <li class="divider"></li>
-				        <li class="dropdown-header">Nav header</li>
-				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li>
-				        <li><a href="#">One more separated link</a></li>
+<!-- 				        <li class="divider"></li> -->
+<!-- 				        <li class="dropdown-header">Nav header</li> -->
+<!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
 				      </ul>
 				    </li>
 				    
@@ -68,11 +66,9 @@
 				      <ul class="dropdown-menu" role="menu">
 				        <li><a href="{% url 'DataManagement:ImportCSV' %}">Import CSV</a></li>
 				        <li><a href="{% url 'DataManagement:DataExplorer' %}">Data Explorer</a></li>
-				        <li><a href="#">Something else here</a></li>
-				        <li class="divider"></li>
-				        <li class="dropdown-header">Nav header</li>
-				        <li><a href="{% url 'DataManagement:testView' %}">Test View</a></li>
-				        <li><a href="#">One more separated link</a></li>
+<!-- 				        <li class="divider"></li> -->
+<!-- 				        <li class="dropdown-header">Nav header</li> -->
+<!-- 				        <li><a href="{% url 'DataManagement:testView' %}">Test View</a></li> -->
 				      </ul>
 				    </li>       		
         		{% endblock %}
