--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -10,12 +10,18 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 	.config(['$httpProvider', function($httpProvider) {
 	    $httpProvider.defaults.xsrfCookieName = 'csrftoken';
 	    $httpProvider.defaults.xsrfHeaderName = 'X-CSRFToken';
-	    
 	}])
 	.controller('FlowResistanceController', 
 		[ '$scope', '$http', '$window', 'util', 'units', 'materials', 
 		function($scope, $http, $window, util, units, materials) {
-			
+		
+// 		$scope.activeTabId = "";
+// 		$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
+// 			  $scope.activeTabId = e.target.id; // activated tab
+// //  			  e.relatedTarget // previous tab
+// 			});
+		
+		
 		$scope.units = units;
 		$scope.materials = materials;
 		$scope.util = util;
@@ -34,9 +40,27 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 {% block content %}
 <div ng-app="FlowResistance" ng-controller="FlowResistanceController">
 	<div class="container">
-	<div class="row">
-	<div class="col-md-1"></div>
-	<div class="col-md-10">
+<!-- 	<div class="row"> -->
+<!-- 	<div class="col-md-1"></div> -->
+<!-- 	<div class="col-md-10"> -->
+<!-- 		<ul class="nav nav-tabs" role="tablist" id="myTab"> -->
+<!-- 		  <li class="active"><a id="superGroupTab" data-target="superGroupPane" role="tab" data-toggle="tab">SuperGroup</a></li> -->
+<!-- 		  <li ><a id="plotTab" data-target="#plotPane" role="tab" data-toggle="tab" ng-click="plotData()">Plot</a></li> -->
+<!-- 		  <li ><a id="tableTab" data-target="#tablePane" role="tab" data-toggle="tab" ng-click="drawTable()">Table</a></li> -->
+<!-- 		</ul> -->
+
+<!-- 		<div class="tab-content"> -->
+<!-- 		  <div class="tab-pane active" id="superGroupPane"> -->
+<!-- 			  	<h1>Pressure losses in Pipe flow</h1> -->
+<!-- 				<div style="position:relative; width:250mm;height:50mm"> -->
+<!-- 						<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object> -->
+<!-- 				</div> -->
+<!-- 				<div smo-input-view="inputs"></div> -->
+<!-- 				<br> -->
+<!-- 				<div ng-show="inputs.inputsObtained"><button class="btn btn-default" ng-click="outputs.fetchData()">Compute</button></div> -->
+<!-- 				<div smo-output-view="outputs"></div> -->
+<!-- 		  </div> -->
+<!-- 		</div> -->
 
 		<h1>Pressure losses in Pipe flow</h1>
 		<div style="position:relative; width:250mm;height:50mm">
@@ -48,9 +72,9 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		<div smo-output-view="outputs"></div>
 	
 	</div>
-	<div class="col-md-1"></div>
-	</div>
-	</div>
+<!-- 	<div class="col-md-1"></div> -->
+<!-- 	</div> -->
+<!-- 	</div> -->
 </div>
 
 {% endblock %}
