--- a/templates/Base.html
+++ b/templates/Base.html
@@ -27,7 +27,7 @@
 		body {
 	  		height: 100%;
 	  		width: 100%;
-	  		background-color: #FEFEEA;	
+	  		background-color: #FFFFCC;	
 		}
 	</style>
 	{% block scripts_and_styles %}
