--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -25,20 +25,20 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		
 	}]);
 </script>
-<style>
-	.nav-tabs {
-		border-bottom: 1px solid #428BCA;
-	}
-	.nav-tabs > li.active > a {
-		border-color: #428BCA; 
-		border-bottom-color: transparent;
-	}
+<!-- <style> -->
+/* 	.nav-tabs { */
+/* 		border-bottom: 1px solid #428BCA; */
+/* 	} */
+/* 	.nav-tabs > li.active > a { */
+/* 		border-color: #428BCA;  */
+/* 		border-bottom-color: transparent; */
+/* 	} */
 	
-	.nav-tabs > li.active > a:hover {
-		border-color: #428BCA; 
-		border-bottom: none;		
-	}
-</style>
+/* 	.nav-tabs > li.active > a:hover { */
+/* 		border-color: #428BCA;  */
+/* 		border-bottom: none;		 */
+/* 	} */
+<!-- </style> -->
 {% endblock %}
 
 {% block content %}
