Styling and more styling

--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block scripts_and_styles %}
-<script src="{% static 'smo-treeview/smo.treeview-test.js' %}"></script>
+<script src="{% static 'smo-treeview/smo.treeview.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'smo-treeview/smo.treeview.css' %}">
 <!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
