--- a/DataManagement/templates/DataManagement/ImportCSV.html
+++ b/DataManagement/templates/DataManagement/ImportCSV.html
@@ -57,7 +57,7 @@ margin-left:20px;}
 	
 	<div ng-if="showPreviewTable">
 		<p>The file contains <span ng-bind="csvPreviewData.numRows"></span> rows<p>
-		<table class="dataTable"> 
+		<table class="dataTable" style="background-color: #EEE;"> 
 			<tr>
 				<td class="row-label"><span style="color: #7F7F7F; font-size: large;" class="glyphicon glyphicon-question-sign" data-toggle="popover"  
 				title="	- Select column names by double-clicking on a row header (leftmost cell with row number)
