--- a/templates/Base.html
+++ b/templates/Base.html
@@ -27,7 +27,7 @@
 		body {
 	  		height: 100%;
 	  		width: 100%;
-	  		background-color: #FFFFCC;	
+	  		background-color: #FFFFD5;	
 		}
 	</style>
 	{% block scripts_and_styles %}
@@ -53,7 +53,7 @@
 				    <li class="dropdown">
 				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">ThermoFluids<span class="caret"></span></a>
 				      <ul class="dropdown-menu" role="menu">
-				        <li><a href="{% url 'ThermoFluids:FluidPropertiesCoolProp' %}">Fluid Properties (CoolProp)</a></li>
+<!-- 				        <li><a href="{% url 'ThermoFluids:FluidPropertiesCoolProp' %}">Fluid Properties (CoolProp)</a></li> -->
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">FlowResistance</a></li>
 <!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
