--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -30,9 +30,12 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 		<div style="text-align: center; position:relative; height:50mm">
 				<object data="{% static 'ThermoFluids/StraightPipe.svg' %}" type="image/svg+xml"></object>
 		</div>
-		<div smo-input-view="inputs"></div>
+		<div ng-form name="myForm">
+			<div smo-input-view="inputs"></div>
+		</div>
 		<br>
-		<div ng-show="inputs.inputsObtained"><button class="btn btn-default" ng-click="compute()">Compute</button></div>
+		<div ng-show="inputs.inputsObtained"><div ng-show="myForm.$valid"><button class="btn btn-default" ng-click="compute()">Compute</button></div></div>
+		
 		<br>
 		<div smo-output-view="outputs"></div>
 	
