--- a/templates/Base.html
+++ b/templates/Base.html
@@ -57,7 +57,7 @@
 				      <ul class="dropdown-menu" role="menu">
  				        <li><a href="{% url 'ThermoFluids:FluidPropsCalculator' %}">Fluid properties calculator</a></li>
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">Flow resistance</a></li>
-				        <li class="divider"></li>
+<!-- 				        <li class="divider"></li> -->
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 <!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
 				      </ul>
