Added a page for calculation of refrigeration cycles
Signed-off-by: Atanas Pavlov <atanas.pavlov@sysmoltd.com>

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -58,6 +58,7 @@
 				      <ul class="dropdown-menu" role="menu">
  				        <li><a href="{% url 'ThermoFluids:FluidPropsCalculator' %}">Fluid properties calculator</a></li>
 				        <li><a href="{% url 'ThermoFluids:FlowResistance' %}">Flow resistance</a></li>
+				        <li><a href="{% url 'ThermoFluids:HeatPump' %}">Heat pump / AC / Refrigerator</a></li>
 				        <li class="divider"></li>
 <!-- 				        <li class="dropdown-header">Nav header</li> -->
 <!-- 				        <li><a href="{% url 'ThermoFluids:testView' %}">Test View</a></li> -->
