--- a/ThermoFluids/templates/ThermoFluids/FlowResistance.html
+++ b/ThermoFluids/templates/ThermoFluids/FlowResistance.html
@@ -34,7 +34,7 @@ angular.module('FlowResistance', ['ui.bootstrap', 'smo'])
 			<div smo-input-view="inputs"></div>
 		</div>
 		<br>
-		<div ng-show="inputs.inputsObtained"><div ng-show="myForm.$valid"><button class="btn btn-default" ng-click="compute()">Compute</button></div></div>
+		<div ng-show="inputs.inputsObtained"><button ng-disabled="!myForm.$valid" class="btn btn-default" ng-click="compute()">Compute</button></div>
 		
 		<br>
 		<div smo-output-view="outputs"></div>
