--- a/templates/Base.html
+++ b/templates/Base.html
@@ -42,15 +42,15 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+<!--             <span class="sr-only">Toggle navigation</span> -->
+<!--             <span class="icon-bar"></span> -->
+<!--             <span class="icon-bar"></span> -->
+<!--             <span class="icon-bar"></span> -->
           </button>
-          <a class="navbar-brand" style="font-size: x-large; font-weight:bold;" href="{% url 'home' %}">SmoWeb</a>
+          <a class="navbar-brand" style="font-size: x-large; font-weight: bold; text-align: center;" href="{% url 'home' %}">SmoWeb</a>
         </div>
       	<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
+			<ul class="nav navbar-nav" >
         		{% block navs %}       		
 				    <li class="dropdown">
 				      <a href="#" class="dropdown-toggle" data-toggle="dropdown">ThermoFluids<span class="caret"></span></a>
@@ -75,6 +75,9 @@
 				    </li>       		
         		{% endblock %}
 			</ul>
+			<div style="text-align: right; padding-top:10px; padding-bottom: 10px;">
+          		<img height=30px src="{% static 'img/SysMoLogo.png' %}">
+        	</div>
 		</div><!--/.nav-collapse -->
       </div>
     </div>
