temporary (before replacing element.replaceWith with append)
Signed-off-by: Ivaylo Mihaylov <ivombg@yahoo.com>

--- a/DataManagement/templates/DataManagement/DataExplorer.html
+++ b/DataManagement/templates/DataManagement/DataExplorer.html
@@ -162,8 +162,7 @@
 {% endblock %}
 
 {% block content %}
-<div ng-app="testApp" ng-controller="testController">
-	<div class="container">
+<div ng-app="testApp" ng-controller="testController" style="display: inline-block; width:85%; padding-top:20px;">
 		<!-- Nav tabs -->
 		<ul class="nav nav-tabs" role="tablist" id="myTab">
 		  <li class="active"><a id="explorerTab" data-target="#treePane" role="tab" data-toggle="tab">Explorer</a></li>
@@ -240,6 +239,5 @@
 				<a id="csvElem" hidden></a>
 		 </div>
 		</div>
-	</div>
 </div>
 {% endblock %}
