--- a/templates/Base.html
+++ b/templates/Base.html
@@ -82,7 +82,7 @@
       </div>
     </div>
     
-    <div style="display: inline-block; width: 10%; vertical-align: top; padding-top: 20px; padding-left: 10px; padding-right: 10px;
+    <div style="display: inline-block; width: 10%; height: 100%; vertical-align: top; padding-top: 20px; padding-left: 10px; padding-right: 10px;
 		margin-right: 30px; background-color: #E6E6FA;">
 			<ul class="nav nav-pills nav-stacked" role="tablist">
 			  <li role="presentation" class="active"><a href="#">View1</a></li>
