--- a/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
+++ b/ThermoFluids/templates/ThermoFluids/FluidPropsCalculator.html
@@ -34,30 +34,40 @@ angular.module('FluidPropsCalculator', ['ui.bootstrap', 'smo'])
 </script>
 {% endblock %}
 
-{% block content %}
-{% verbatim %}
-<div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController" style="display: inline-block; width:85%; padding-top:20px;">
-	<h1>Fluid properties calculator</h1>
-	<ul class="nav nav-tabs" role="tablist" id="FluidPointTabs">
-  		<li ng-repeat="input in inputs track by $index" ng-class="getTabClass($index)">
-	  		<a id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab">Fluid point {{$index + 1}}</a>
-  		</li>
-	  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()">+</a></li>
-	</ul>
+{% block pills %}
+	<li class="active" role="presentation"><a id="calcTab" data-target="#calculator" role="tab" data-toggle="tab">Calculator</a></li>
+	<li role="presentation"> <a id="docTab" data-target="#doc" role="tab" data-toggle="tab">Doc</a></li>
+{% endblock %}
 
-	
+{% block content %}
+{% verbatim %}	
+<div ng-app="FluidPropsCalculator" ng-controller="FluidPropsController" style="display: inline-block; width:85%; padding-top:20px;">
 	<div class="tab-content">
-			<div ng-repeat="input in inputs track by $index" ng-class="'tab-pane '+ getTabClass($index)" id="FluidPoint{{$index + 1}}">
-				<br>
-				<div ng-form name="myForm{{$index + 1}}">
-					<div smo-input-view="inputs[$index]"></div>
+		<div class="tab-pane active" id="calculator">		
+			<h1>Fluid properties calculator</h1>
+			<ul class="nav nav-tabs" role="tablist" id="FluidPointTabs">
+		  		<li ng-repeat="input in inputs track by $index" ng-class="getTabClass($index)">
+			  		<a id="FP{{$index + 1}}Tab" data-target="#FluidPoint{{$index + 1}}" role="tab" data-toggle="tab">Fluid point {{$index + 1}}</a>
+		  		</li>
+			  	<li><a data-target="" id="FluidPointNew" ng-click="createNewTab()">+</a></li>
+			</ul>		
+			<div class="tab-content">
+				<div ng-repeat="input in inputs track by $index" ng-class="'tab-pane '+ getTabClass($index)" id="FluidPoint{{$index + 1}}">
+					<br>
+					<div ng-form name="myForm{{$index + 1}}">
+						<div smo-input-view="inputs[$index]"></div>
+					</div>
+					<br>
+					<div ng-show="inputs[$index].inputsObtained"><button ng-disabled="!myForm{{$index + 1}}.$valid" class="btn btn-default" ng-click="compute($index)">Compute</button></div>
+					<br>
+					<div smo-output-view="outputs[$index]"></div>
 				</div>
-				<br>
-				<div ng-show="inputs[$index].inputsObtained"><button ng-disabled="!myForm{{$index + 1}}.$valid" class="btn btn-default" ng-click="compute($index)">Compute</button></div>
-				<br>
-				<div smo-output-view="outputs[$index]"></div>
 			</div>
-	</div>
+		</div>
+		<div class="tab-pane" id="doc">
+			Documentation
+		</div>
+	</div>	
 </div>
 {% endverbatim %}
 {% endblock %}
